plugins {
    id 'com.google.firebase.crashlytics'
    id 'org.jetbrains.kotlin.android'
}
apply plugin: 'com.android.application'
//apply plugin: 'io.fabric'
apply plugin: 'com.google.gms.google-services'

android {
    signingConfigs {
        config {
            keyAlias 'Shaaan'
            keyPassword 'cyanogenm0d'
            storeFile file('/Users/shaaan/Downloads/shaaan.jks')
            storePassword 'cyanogenm0d'
        }
    }
    compileSdkVersion 35
    defaultConfig {
        applicationId "in.shaaan.pcipharmd"
        minSdkVersion 29
        targetSdkVersion 35
        versionCode getVersionCodeTimestamp()
//        versionCode 1909301656
        versionName "3.8"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        resourceConfigurations += ['en']
        multiDexEnabled true
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.config
        }

        debug {
//            minifyEnabled true
//            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = 17
        targetCompatibility = 17
    }
    namespace 'in.shaaan.pcipharmd'

    buildFeatures {
        viewBinding true
    }
    kotlinOptions {
        jvmTarget = '17'
    }
}

def getVersionCodeTimestamp() {
    def date = new Date()
    def formattedDate = date.format('yyMMddmm')
    def code = formattedDate.toInteger()
    println sprintf("VersionCode: %d", code)
    return code
}

dependencies {
    api fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.core:core-ktx:1.13.1'
    testImplementation 'junit:junit:4.13.2'

    // App Compat
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.browser:browser:1.8.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.annotation:annotation:1.8.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.android.support:multidex:1.0.3'

//    Google
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'com.google.android.gms:play-services-ads:23.2.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'com.google.android.gms:play-services-auth:21.2.0'
    implementation platform('com.google.firebase:firebase-bom:33.1.2')

    implementation project(':nativetemplates')
    implementation 'com.google.firebase:firebase-analytics'
    implementation 'com.google.firebase:firebase-crashlytics'

}
